--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     referrerpolicy="no-referrer" />
 
 </head>
-<body>
+<body onload="loadInitialData()">
     <!-- replace data-bs-target="#showTask" -->
-     <button type="button" 
+     <!-- <button type="button" 
              class="btn btn-primary" 
              data-bs-toggle="modal" 
              data-bs-target="#showTask">
      Launch demo modal
-    </button>
+    </button> -->
 
    <!-- btn on small screen size -->
     <div class="add__new__btn__mobile__only d-xxl-none">
@@ -114,7 +114,7 @@
                     <button type="button" 
                             class="btn btn-secondary" 
                             data-bs-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary" onclick="handleSubmit()">Save changes</button>
                 </div>
             </div>
         </div>
